2010-05-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: import AIC & BIC from stats4, *and* re-export
	* tests/lmer-1.R: "test" these

2010-05-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmer2.R (bootMer, simulate): new (lmer2-only) functions;
	* man/bootMer.Rd: doc;  more to come.

2010-04-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/profile.R (ans): replace use of vcov() by unscaledVar() in
	devfun() used inside profile().

2010-03-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Depends): must depend on (not just import) minqa, at
	the time setMethod(bobyqa, .) is called.
	* NAMESPACE: use ".." (for nicer ESS fontification)


2008-09-26  Douglas Bates <bates@stat.wisc.edu>

	* [r239] DESCRIPTION: New release
	* [r238] R/carryOver.R: Carryover model revisions (unexported)
	* [r237] R/lmer.R, src/lmer.c: Handle weights correctly for LMMs, fix
	  some of the problems reported by Terry Therneau
	* [r236] man/lmer.Rd: Cosmetic
	* [r235] NAMESPACE: Allow for currently unexported predict method
	* [r234] tests/lmer-1.Rout.save, tests/nlmer.R, tests/nlmer.Rout.save:
	  remove some unstable tests which should be more stable in refactored
	  code
	* [r233] inst/doc/Doxyfile, inst/doc/Implementation.pdf,
	  inst/doc/PLSvGLS.pdf, inst/doc/Theory.Rnw, inst/doc/Theory.pdf: Revise
	  Theory.Rnw for the allcoef version

2008-09-15  Douglas Bates <bates@stat.wisc.edu>

	* [r231] R/carryOver.R: Re-write of carryOver with utility functions
	* [r230] src/lmer.c: Changes in update_dev from Bin Dai
	* [r229] R/lmer.R: Added a preliminary, unexported predict method

2008-09-09  Douglas Bates <bates@stat.wisc.edu>

	* [r227] R/lmer.R, src/lmer.c: Add new positions in the deviance slot
	* [r226] inst/doc/Theory.Rnw, inst/doc/Theory.pdf: Revising the
	  computational methods document in new notation
	* [r225] man/mer-class.Rd, man/ranef.Rd: Allow which argument in
	  mer_postVar